ember-bdi/tests/macros/compile-fail/from_term_transparent_empty_tuple.stderr
error: #[ember(transparent)] is only supported on single-element tuple structs
 --> tests/macros/compile-fail/from_term_transparent_empty_tuple.rs:6:8
  |
6 | struct Empty();
  |        ^^^^^
